--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@shopify/shopify-api": "^4.2.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -19,6 +20,8 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "prettier": "^2.7.1",
+    "sass": "^1.53.0",
     "typescript": "4.7.4"
   }
 }
