--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@shopify/shopify-api": "^4.2.0",
     "next": "12.2.3",
+    "next-seo": "^5.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
