--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@shopify/shopify-api": "^4.2.0",
+    "microcms-js-sdk": "^2.2.1",
     "next": "12.2.3",
     "next-seo": "^5.5.0",
     "react": "18.2.0",
